--- a/index.html
+++ b/index.html
@@ -7,25 +7,37 @@
   <link rel="stylesheet" href="style.css">
   <style>
     * {margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-    body {background:#f8f8f8;color:#333;line-height:1.6;overflow-x:hidden;}
-    header {display:flex;align-items:center;justify-content:space-between;padding:15px 30px;background:white;box-shadow:0 3px 10px rgba(0,0,0,0.05);position:sticky;top:0;z-index:1000;}
-    header .logo {width:120px;}
-    header input#searchBar {flex:1;margin:0 20px;padding:10px 15px;border-radius:10px;border:1px solid #ccc;}
-    header nav a {margin-left:15px;padding:8px 12px;border-radius:8px;transition:0.3s;background:#ff6600;color:white;font-weight:500;text-decoration:none;}
+    body {background:#f4f4f9;color:#333;line-height:1.6;overflow-x:hidden;}
+    header {display:flex;align-items:center;justify-content:space-between;padding:15px 30px;background:white;box-shadow:0 4px 15px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000;border-bottom:1px solid #eee;}
+    header .logo {width:130px;}
+    header input#searchBar {flex:1;margin:0 20px;padding:10px 15px;border-radius:10px;border:1px solid #ccc;transition:0.3s;}
+    header input#searchBar:focus {border-color:#ff6600;outline:none;box-shadow:0 0 8px rgba(255,102,0,0.3);}
+    header nav a {margin-left:15px;padding:8px 14px;border-radius:8px;transition:0.3s;background:#ff6600;color:white;font-weight:500;text-decoration:none;box-shadow:0 2px 6px rgba(0,0,0,0.1);}
     header nav a:hover {background:#e65c00;}
-    main {padding:40px 20px;text-align:center;}
-    main h1 {font-size:32px;color:#ff6600;margin-bottom:15px;}
-    .whatsapp-float {position:fixed;bottom:20px;right:20px;background:#25d366;color:white;padding:15px;border-radius:50%;font-size:24px;box-shadow:0 4px 15px rgba(0,0,0,0.2);z-index:1000;}
+    main {padding:60px 20px;text-align:center;}
+    main h1 {font-size:36px;color:#ff6600;margin-bottom:20px;text-shadow:1px 1px 3px rgba(0,0,0,0.1);}
+    main p {font-size:18px;color:#555;margin-bottom:40px;}
+    .whatsapp-float {position:fixed;bottom:20px;right:20px;background:#25d366;color:white;padding:18px;border-radius:50%;font-size:26px;box-shadow:0 4px 15px rgba(0,0,0,0.3);z-index:1000;transition:0.3s;}
+    .whatsapp-float:hover {transform:scale(1.1);}
     #adminLoginPopup {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);display:flex;justify-content:center;align-items:center;z-index:10000;opacity:0;pointer-events:none;transition:0.3s;}
     #adminLoginPopup.active {opacity:1;pointer-events:auto;}
-    .admin-box {background:white;padding:30px;border-radius:15px;width:90%;max-width:400px;text-align:center;box-shadow:0 6px 25px rgba(0,0,0,0.3);}
+    .admin-box {background:white;padding:30px;border-radius:15px;width:90%;max-width:400px;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,0.25);}
     .admin-box h2 {color:#ff6600;margin-bottom:20px;}
     .admin-box input {width:100%;padding:10px;margin:10px 0;border:1px solid #ccc;border-radius:10px;}
     .admin-box button {background:#ff6600;color:white;border:none;padding:10px 20px;border-radius:10px;font-weight:bold;cursor:pointer;transition:0.3s;}
     .admin-box button:hover {background:#e65c00;}
+    /* Agreement Popup */
+    #rulesPopup {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);display:flex;justify-content:center;align-items:center;z-index:9999;opacity:0;pointer-events:none;transition:0.3s;}
+    #rulesPopup.active {opacity:1;pointer-events:auto;}
+    .rules-box {background:white;padding:25px 30px;border-radius:15px;width:90%;max-width:500px;max-height:80%;overflow-y:auto;box-shadow:0 8px 25px rgba(0,0,0,0.2);text-align:left;}
+    .rules-box h2 {color:#ff6600;margin-bottom:15px;text-align:center;}
+    .rules-box p {margin-bottom:10px;color:#555;line-height:1.5;}
+    .rules-box button {background:#ff6600;color:white;border:none;padding:10px 20px;border-radius:10px;font-weight:bold;cursor:pointer;display:block;margin:20px auto 0;transition:0.3s;}
+    .rules-box button:hover {background:#e65c00;}
   </style>
 </head>
 <body>
+
   <header>
     <img src="./logo.png" alt="ZAID STORE Logo" class="logo">
     <input type="text" id="searchBar" placeholder="Search products...">
@@ -53,6 +65,15 @@
     </div>
   </div>
 
+  <!-- ===== Rules / Agreement Popup ===== -->
+  <div id="rulesPopup">
+    <div class="rules-box">
+      <h2>Welcome to ZAID STORE!</h2>
+      <p id="typedRules"></p>
+      <button id="agreeBtn">I Agree</button>
+    </div>
+  </div>
+
   <!-- ===== Firebase Setup ===== -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
@@ -74,6 +95,7 @@
   </script>
 
   <script>
+    // ===== Admin Popup =====
     const adminPopup = document.getElementById("adminLoginPopup");
     const loginBtn = document.getElementById("loginBtn");
     const adminPassword = document.getElementById("adminPassword");
@@ -96,10 +118,59 @@
     });
 
     adminPopup.addEventListener("click", (e) => {
-      if (e.target === adminPopup) {
-        adminPopup.classList.remove("active");
-      }
+      if (e.target === adminPopup) adminPopup.classList.remove("active");
     });
+
+    // ===== Rules / Agreement Popup =====
+    (function rulesTyping() {
+      const popup = document.getElementById('rulesPopup');
+      const typedRules = document.getElementById('typedRules');
+      const agreeBtn = document.getElementById('agreeBtn');
+
+      const rulesText = `
+Welcome to ZAID STORE! 💫
+
+Please read carefully before using our website.
+
+🧾 General Rules:
+- Provide accurate personal details including your full name, phone number, and address.
+- Orders are confirmed via WhatsApp; ensure your number is correct.
+- Avoid fake orders or misuse of this system.
+- All products are guaranteed 100% original & high quality.
+- Payments accepted: JazzCash, EasyPaisa, Cash on Delivery.
+
+🛍️ How to Use:
+1️⃣ Browse categories (Cosmetics, Garments, Perfumes).
+2️⃣ Click on a product to view details.
+3️⃣ Press "Order" to send product name & price to WhatsApp.
+4️⃣ Only the admin can add or remove products & staff.
+
+🚚 Delivery & Support:
+- Provide clear delivery instructions.
+- Support available via WhatsApp: 03469489167
+- Business hours: 9:00 AM – 8:00 PM.
+
+Thank you for choosing ZAID STORE! Enjoy shopping 💖
+`;
+
+      if (!localStorage.getItem('agreedToRules')) {
+        popup.classList.add('active');
+        let i = 0;
+        (function type() {
+          if (i < rulesText.length) {
+            typedRules.textContent += rulesText.charAt(i);
+            i++;
+            setTimeout(type, 10);
+          }
+        })();
+      }
+
+      agreeBtn.addEventListener('click', () => {
+        localStorage.setItem('agreedToRules', 'true');
+        popup.classList.remove('active');
+      });
+    })();
   </script>
+
 </body>
 </html>
