--- a/garments.html
+++ b/garments.html
@@ -3,80 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Garments - ZAID STORE</title>
-<link rel="stylesheet" href="style.css">
+<title>ZAID STORE - Garments</title>
 <style>
-  body {font-family:'Poppins',sans-serif; background:#f4f4f9; margin:0; padding:0; color:#333;}
-  header {display:flex; align-items:center; padding:15px 30px; background:white; box-shadow:0 4px 15px rgba(0,0,0,0.1);}
-  header img.logo {width:130px; margin-right:20px;}
-  header h2 {color:#ff6600;}
-  .product-container {display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;}
-  .product-card {background:white; width:220px; border-radius:12px; padding:15px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; text-align:center;}
-  .product-card:hover {transform:translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.15);}
-  .product-card img {width:100%; height:180px; object-fit:cover; border-radius:10px;}
-  .product-card h3 {font-size:20px; color:#ff6600; margin:10px 0 5px;}
-  .product-card p.description {font-size:14px; color:#555; margin-bottom:10px; min-height:40px;}
-  .product-card p.price {font-size:16px; font-weight:bold; margin-bottom:10px;}
-  .product-card button.order-btn {background:#25d366; color:white; border:none; padding:8px 12px; border-radius:8px; cursor:pointer; transition:0.3s;}
-  .product-card button.order-btn:hover {background:#128c3e;}
+body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; }
+.product-card { border: 1px solid #ddd; padding: 10px; margin: 10px 0; background: #fff; display: flex; align-items: center; justify-content: space-between; }
+img { width: 50px; height: 50px; object-fit: cover; margin-right: 10px; }
+button { padding: 5px 10px; cursor: pointer; }
 </style>
 </head>
 <body>
+<h1>Garments</h1>
+<div id="productContainer"></div>
 
-<header>
-  <a href="index.html"><img src="logo.png" class="logo" alt="ZAID STORE Logo"></a>
-  <h2>Garments Section</h2>
-</header>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
+<script>
+const firebaseConfig = { /* same config */ };
+const app = firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-<div id="productContainer" class="product-container"></div>
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
-import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-database.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyBNvUn85iXp6ZXMTBLAKYR_OsuXHPDk0TM",
-  authDomain: "zaid-cosmetics-f3792.firebaseapp.com",
-  databaseURL: "https://zaid-cosmetics-f3792-default-rtdb.firebaseio.com",
-  projectId: "zaid-cosmetics-f3792",
-  storageBucket: "zaid-cosmetics-f3792.firebasestorage.app",
-  messagingSenderId: "1027145686032",
-  appId: "1:1027145686032:web:e3797f9b0795ace2987e95",
-  measurementId: "G-TP33NHR7B2"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-function loadProducts(category) {
-  const container = document.getElementById("productContainer");
-  const productsRef = ref(db, category);
-  onValue(productsRef, (snapshot) => {
-    const products = snapshot.val();
-    container.innerHTML = "";
-    for (let key in products) {
-      const p = products[key];
-      const card = document.createElement("div");
-      card.className = "product-card";
-      card.innerHTML = `
-        <img src="${p.image}" alt="${p.name}">
-        <h3>${p.name}</h3>
-        <p class="description">${p.description}</p>
-        <p class="price">RS ${p.price}</p>
-        <button class="order-btn" onclick="orderWhatsApp('${p.name}', '${category}', '${p.price}')">Order on WhatsApp</button>
+function loadProducts(category){
+  const container=document.getElementById("productContainer");
+  db.ref(category).once('value', snapshot=>{
+    container.innerHTML="";
+    snapshot.forEach(child=>{
+      const p=child.val();
+      const card=document.createElement("div");
+      card.className="product-card";
+      card.innerHTML=`
+        <div>
+          <img src="${p.image}" alt="${p.name}">
+          ${p.name} - Rs. ${p.price}
+        </div>
+        <button onclick="orderWhatsApp('${p.name}','${category}','${p.price}')">Order</button>
       `;
       container.appendChild(card);
-    }
+    });
   });
 }
 
-function orderWhatsApp(name, category, price) {
-  const message = `Hello, I want to order:\nProduct: ${name}\nCategory: ${category}\nPrice: RS ${price}`;
-  window.open(`https://wa.me/03469489167?text=${encodeURIComponent(message)}`, '_blank');
+function orderWhatsApp(name,category,price){
+  const message=`Hello, I want to order:\nProduct: ${name}\nCategory: ${category}\nPrice: Rs ${price}`;
+  const url=`https://wa.me/03469489167?text=${encodeURIComponent(message)}`;
+  window.open(url,'_blank');
 }
 
 loadProducts("garments");
 </script>
-
 </body>
 </html>
